# handical

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  handical.h
cpp/: CMakeLists.txt  handical_factor.cpp  handical_factor.h
cpp/tests/: test_handical_factor.cpp
python/: config.yaml  handical_test.py  handicalpy.py  run_handical_rlg.py
